codage du squelette html, à terminer, notamment la section menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
 </head>
+
 <body>
+    <header>
+        <h1>ohmyfood</h1>
+    </header>
+
+    <div>
+
+    </div>
+
+    <section>
+        <h2> Réservez le menu qui vous convient</h2>
+        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+        <div>
+            <p>Explorer nos restaurants</p>
+        </div>
+    </section>
+
+    <h2>Fonctionnement</h2>
+
+    <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la favicon, TBD-->
+        <div class="step__number">
+            <h2 class="step__number--title"></h2>
+        </div>
+        <div class="step_number"></div>
+        <div class="step__number"></div>
+    </div>
     
+    <section class="menu">
+        <h2 class="menu--title">Restaurants</h2>
+        <div class="menu__numberone">
+            
+        </div>
+        <div class="menu__numbertwo"></div>
+        <div class="menu__numberthree"></div>
+        <div class="menu__numberfour"></div>
+        <!--Modèle encore à déterminer pour le contenu des divs-->
+    </section>
+
+    <footer>
+        <h2></h2>
+        <ul></ul>
+    </footer>
 </body>
 </html>
