rédaction code html de la page index et palette du goût

--- a/index.html
+++ b/index.html
@@ -11,42 +11,68 @@
         <h1>ohmyfood</h1>
     </header>
 
-    <div>
-
+    <div class="location">
+        <p>Paris, Belleville</p>
     </div>
 
     <section>
-        <h2> Réservez le menu qui vous convient</h2>
+        <h2 class="title"> Réservez le menu qui vous convient</h2>
         <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <div>
             <p>Explorer nos restaurants</p>
         </div>
     </section>
 
-    <h2>Fonctionnement</h2>
+    <h2 class="title">Fonctionnement</h2>
 
     <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la favicon, TBD-->
         <div class="step__number">
-            <h2 class="step__number--title"></h2>
+            <h2 class="step__number--title">Choisissez un restaurant</h2>
         </div>
-        <div class="step_number"></div>
-        <div class="step__number"></div>
+        <div class="step__number">
+            <h2 class="step__number--title">Composez votre menu</h2>
+        </div>
+        <div class="step__number">
+            <h2 class="step__number--title">Dégustez au restaurant</h2>
+        </div>
     </div>
     
     <section class="menu">
         <h2 class="menu--title">Restaurants</h2>
-        <div class="menu__numberone">
-            
-        </div>
-        <div class="menu__numbertwo"></div>
-        <div class="menu__numberthree"></div>
-        <div class="menu__numberfour"></div>
+        <a href="Palette_du_goût.html">
+            <div class="menu__numberone">
+                <img src="/images/restaurants/1-Palette_du_goût.jpg" alt="photo montrant un plat gastronomique" />
+            </div>
+        </a>
+
+        <a href="">
+            <div class="menu__numbertwo">
+                <img src="/images/restaurants/2-Note_enchantée.jpg" alt="photo montrant un plat gastronomique" />
+            </div>
+        </a>
+
+        <a href="">
+            <div class="menu__numberthree">
+                <img src="images/restaurants/3-A_la_française.jpg" alt="photo montrant un plat gastronomique" />
+            </div>
+        </a>
+
+        <a href="">
+            <div class="menu__numberfour">
+                <img src="images/restaurants/4-Délice_des_sens.jpg" alt="photo montrant un plat gastronomique" />
+            </div>
+        </a>
         <!--Modèle encore à déterminer pour le contenu des divs-->
     </section>
 
     <footer>
-        <h2></h2>
-        <ul></ul>
+        <h2 class="footer__title">ohmyfood</h2>
+        <ul class="footer__list">
+            <li>Proposer un restaurant</li>
+            <li>Devenir partenaire</li>
+            <li>Mentions légales</li>
+            <li>Contact</li>
+        </ul>
     </footer>
 </body>
 </html>
