--- a/4-Délice des sens.html
+++ b/4-Délice des sens.html
@@ -4,49 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La palette du goût</title>
+    <title>Déclide des sens</title>
 </head>
 
 <body>
-    <header>
-        <h1>ohmyfood</h1>
-    </header>
 
-    <section class="palette">
-        <img src="images/restaurants/1-Palette_du_goût.jpg" alt="photo montrant un plat gastronomique" />
+    <section class="bigcards">
+        <img src="images/restaurants/4-Délice_des_sens.jpg" alt="photo montrant un plat gastronomique" />
 
         <div class="composition">
-            <h2 class="composition--title">La plaette du goût</h2>
+            <h2 class="composition--title">Le délice des sens</h2>
 
             <div class="palette__entry">
                 <h2 class="palette--title">Entrées</h2>
 
                 <div class="palette__cards">
                     <a href="#">
-                        <h2 class="dish__name">Fricassée d'escargot</h2>
+                        <h2 class="dish__name">Tartare de thon</h2>
                         <div class="descriptive">
-                            <p class="dish__details">Au piment d'espelette</p>
-                            <p class="dish__details">25€</p>
+                            <p class="descriptive--details">Assaisonné au yuzu</p>
+                            <p class="descriptive--details">25€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette_cards">
                     <a href="#">
-                        <h2 class="dish__name">Foie gras de canard mi-cuit</h2>
+                        <h2 class="dish__name">Bouchée de homard croustillant</h2>
                         <div class="descriptive">
-                            <p class="dish__details">Et ses copeaux de truffe noire</p>
-                            <p class="dish__details">35€</p>
+                            <p class="descriptive--details">Et sa farandole de petits légumes</p>
+                            <p class="descriptive--details">35€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette_cards">
                     <a href="#">
-                        <h2 class="dish__name">Oeuf au plat</h2>
+                        <h2 class="dish__name">Velouté de cèpes</h2>
                         <div class="descriptive">
-                            <p class="dish__details">Assaisonnée à la truffe sur lit de caviar</p>
-                            <p class="dish__details">20€</p>
+                            <p class="descriptive--details">Aux truffes</p>
+                            <p class="descriptive--details">20€</p>
                         </div>
                     </a>
                 </div>
@@ -56,63 +53,63 @@
 
                     <div class="palette_cards">
                         <a href="#">
-                            <h2 class="dish__name">Filet de boeuf aux herbes</h2>
+                            <h2 class="dish__name">Poulet rôti aux herbes de provence</h2>
                             <div class="descriptive">
-                                <p class="dish__details">Accompagné de sa ribambelle de légumes</p>
-                                <p class="dish__details">40€</p>
+                                <p class="descriptive--details">Et sa crème de truffe</p>
+                                <p class="descriptive--details">40€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette_cards">
                         <a href="#">
-                            <h2 class="dish__name">Parmentier de queue de boeuf</h2>
+                            <h2 class="dish__name">Langouste rôtie</h2>
                             <div class="descriptive">
-                                <p class="dish__details">à la truffe noire sur sa purée de panais</p>
-                                <p class="dish__details">35€</p>
+                                <p class="descriptive--details">Et ses légumes de saison</p>
+                                <p class="descriptive--details">35€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette_cards">
                         <a href="#">
-                            <h2 class="dish__name">Filet de Turbot</h2>
+                            <h2 class="dish__name">Côte de boeuf angus</h2>
                             <div class="descriptive">
-                                <p class="dish__details">Aux agrumes</p>
-                                <p class="dish__details">44€</p>
+                                <p class="descriptive--details">Et sa purée de panais</p>
+                                <p class="descriptive--details">44€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette__desserts">
-                        <h2 class="palette--title">Plats</h2>
+                        <h2 class="palette--title">Desserts</h2>
 
                         <div class="palette_cards">
                             <a href="#">
-                                <h2 class="dish__name">Paris-Brest</h2>
+                                <h2 class="dish__name">Farandole de desserts</h2>
                                 <div class="descriptive">
-                                    <p class="dish__details">Revisité</p>
-                                    <p class="dish__details">18€</p>
+                                    <p class="descriptive--details">Du chef</p>
+                                    <p class="descriptive--details">18€</p>
                                 </div>
                             </a>
                         </div>
 
                         <div class="palette_cards">
                             <a href="#">
-                                <h2 class="dish__name">Macaron au chocolat d'exception</h2>
+                                <h2 class="dish__name">Crème brulée</h2>
                                 <div class="descriptive">
-                                    <p class="dish__details">Et glace à la vanille de Madagascare</p>
-                                    <p class="dish__details">22€</p>
+                                    <p class="descriptive--details">Revisitée</p>
+                                    <p class="descriptive--details">22€</p>
                                 </div>
                             </a>
                         </div>
 
                         <div class="palette_cards">
                             <a href="#">
-                                <h2 class="dish__name">Mousse au chocolat</h2>
+                                <h2 class="dish__name">Tiramisu</h2>
                                 <div class="descriptive">
-                                    <p class="dish__details">Au piment d'espelette et à la truffe noire</p>
-                                    <p class="dish__details">23€</p>
+                                    <p class="descriptive--details">à la noisette</p>
+                                    <p class="descriptive--details">23€</p>
                                 </div>
                             </a>
                         </div>
@@ -136,4 +133,5 @@
             <li>Contact</li>
         </ul>
     </footer>
+    
 </body>
