--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=".public/css/style.css" />
+    <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>Oh My Food</title>
 </head>
 
@@ -64,8 +68,14 @@
     <footer>
         <h2 class="footer__title">ohmyfood</h2>
         <ul class="footer__list">
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
+            <li>
+                <i class="fas fa-utensils"></i>
+                Proposer un restaurant
+            </li>
+            <li>
+                <i class="fas fa-hands-helping"></i>
+                Devenir partenaire
+            </li>
             <li>Mentions légales</li>
             <li>Contact</li>
         </ul>
