design du footer css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=".public/css/style.css" />
+    <link rel="stylesheet" href="main.css" />
     <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>Oh My Food</title>
@@ -25,7 +25,7 @@
 
     <h2 class="title">Fonctionnement</h2>
 
-    <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la favicon, TBD-->
+    <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la fontawesome, TBD-->
         <div class="step__number">
             <h2 class="step__number--title">Choisissez un restaurant</h2>
         </div>
@@ -67,18 +67,10 @@
 
     <footer>
         <h2 class="footer__title">ohmyfood</h2>
-        <ul class="footer__list">
-            <li>
-                <i class="fas fa-utensils"></i>
-                Proposer un restaurant
-            </li>
-            <li>
-                <i class="fas fa-hands-helping"></i>
-                Devenir partenaire
-            </li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-        </ul>
+        <a href="#" class="footer__links"><i class="fas fa-utensils footer--marge"></i>Proposer un restaurant</a>
+        <a href="#" class="footer__links"><i class="fas fa-hands-helping footer--marge"></i>Devenir partenaire</a>        
+        <a href="#" class="footer__links">Mentions légales</a>
+        <a href="mailto:contact@gmail.com" class="footer__links">Contact</a>
     </footer>
     
 </body>
