designing du menu de la page principal, inclusion du logo en en tête

--- a/1-Palette du goût.html
+++ b/1-Palette du goût.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <img src="images/logo/ohmyfood.png" />
     </header>
 
     <section class="bigcards">
