--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 
 <body>
     <header>
-        <h1>ohmyfood</h1>
+        <h1>
+            <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
+        </h1>
     </header>
 
-    <section>
-        <h2 class="title"> Réservez le menu qui vous convient</h2>
-        <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
+    <section class="introduction">
+        <div class="introduction__location">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>Paris, Belleville</p>
+        </div>
+
+        <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
+        <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <div>
             <p>Explorer nos restaurants</p>
         </div>
