inclusion du logo sur toutes les pages, design du descriptif des étapes

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 
     <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la fontawesome, TBD-->
         <div class="step__number">
+            <i class="fas fa-mobile-alt"></i>
             <h2 class="step__number--title">Choisissez un restaurant</h2>
         </div>
         <div class="step__number">
+            <i class="fas fa-list-ul"></i>
             <h2 class="step__number--title">Composez votre menu</h2>
         </div>
         <div class="step__number">
+            <i class="fas fa-store"></i>
             <h2 class="step__number--title">Dégustez au restaurant</h2>
         </div>
     </div>
