--- a/2-La note enchantée.html
+++ b/2-La note enchantée.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <header>
+        <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
+    </header>
+
     <section class="bigcards">
         <img src="images/restaurants/2-Note_enchantée.jpg" alt="photo montrant un plat gastronomique" />
 
@@ -135,12 +139,10 @@
 
     <footer>
         <h2 class="footer__title">ohmyfood</h2>
-        <ul class="footer__list">
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-        </ul>
+        <a href="#" class="footer__links"><i class="fas fa-utensils footer--marge"></i>Proposer un restaurant</a>
+        <a href="#" class="footer__links"><i class="fas fa-hands-helping footer--marge"></i>Devenir partenaire</a>        
+        <a href="#" class="footer__links">Mentions légales</a>
+        <a href="mailto:contact@gmail.com" class="footer__links">Contact</a>
     </footer>
     
 </body>
