--- a/4-Délice des sens.html
+++ b/4-Délice des sens.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Déclide des sens</title>
+    <title>Délicedes sens</title>
 </head>
 
 <body>
+    <header>
+        <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
+    </header>
 
     <section class="bigcards">
         <img src="images/restaurants/4-Délice_des_sens.jpg" alt="photo montrant un plat gastronomique" />
@@ -126,12 +129,10 @@
 
     <footer>
         <h2 class="footer__title">ohmyfood</h2>
-        <ul class="footer__list">
-            <li>Proposer un restaurant</li>
-            <li>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
-        </ul>
+        <a href="#" class="footer__links"><i class="fas fa-utensils footer--marge"></i>Proposer un restaurant</a>
+        <a href="#" class="footer__links"><i class="fas fa-hands-helping footer--marge"></i>Devenir partenaire</a>        
+        <a href="#" class="footer__links">Mentions légales</a>
+        <a href="mailto:contact@gmail.com" class="footer__links">Contact</a>
     </footer>
     
 </body>
