ajout de variables couleurs, design du cercle autour des chiffres, le h1 a changé, les images s'affichent toutes correctement, toutes les cartes sont cliquables

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="main.css" />
     <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
-    <title>Oh My Food</title>
+    <title>ohmyfood</title>
 </head>
 
 <body>
     <header>
-        <h1>
             <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
-        </h1>
     </header>
 
     <section class="introduction">
@@ -23,7 +21,7 @@
             <p>Paris, Belleville</p>
         </div>
 
-        <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
+        <h1 class="introduction--title"> Réservez le menu qui vous convient</h1>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <div>
             <p>Explorer nos restaurants</p>
@@ -36,14 +34,17 @@
         <div class="step__number">
             <i class="fas fa-mobile-alt"></i>
             <h2 class="step__number--title">Choisissez un restaurant</h2>
+            <span class="step--lozenge">1</span>
         </div>
         <div class="step__number">
             <i class="fas fa-list-ul"></i>
             <h2 class="step__number--title">Composez votre menu</h2>
+            <span class="step--lozenge">2</span>
         </div>
         <div class="step__number">
             <i class="fas fa-store"></i>
             <h2 class="step__number--title">Dégustez au restaurant</h2>
+            <span class="step--lozenge">3</span>
         </div>
     </div>
     
@@ -51,8 +52,8 @@
         <h2 class="menu--title">Restaurants</h2>
 
             <article class="menu__cards">
-                <a href="1-Palette du goût.html" class="menu__cards--link">
-                    <img src="/images/restaurants/1-Palette_du_goût.jpg" alt="photo montrant un plat gastronomique" 
+                <a href="1-Palette du gout.html" class="menu__cards--link">
+                    <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">La palette du goût</h2>
                     <p class="menu__cards--describe">Ménilmontant</p>
@@ -60,8 +61,8 @@
             </article>      
 
             <article class="menu__cards">
-                <a href="La note enchantée" class="menu__cards--link">
-                    <img src="/images/restaurants/2-Note_enchantée.jpg" alt="photo montrant un plat gastronomique" 
+                <a href="La note enchantee" class="menu__cards--link">
+                    <img src="images/restaurants/2-Note_enchantee.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">La note enchantée</h2>
                     <p class="menu__cards--describe">Charonne</p>
@@ -69,8 +70,8 @@
             </article>
         
             <article class="menu__cards">
-                <a href="3-A la Française.html" class="menu__cards--link">
-                    <img src="images/restaurants/3-A la_française.jpg" alt="photo montrant un plat gastronomique" 
+                <a href="3-A la Francaise.html" class="menu__cards--link">
+                    <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">à la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
@@ -78,8 +79,8 @@
             </article>
 
             <article class="menu__cards">
-                <a href="4-Délice des sens.html" class="menu__cards--link">
-                    <img src="images/restaurants/4-Délice_des_sens.jpg" alt="photo montrant un plat gastronomique"
+                <a href="4-Delice des sens.html" class="menu__cards--link">
+                    <img src="images/restaurants/4-Delice_des_sens.jpg" alt="photo montrant un plat gastronomique"
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">Le délice des sens</h2>
                     <p class="menu__cards--describe">Folie-Méricourt</p>
