--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <h1 class="introduction--title"> Réservez le menu qui vous convient</h1>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <div>
+        <div class="introduction__buton">
             <p>Explorer nos restaurants</p>
         </div>
     </section>
