design page du premier menu, a terminer

--- a/1-Palette du gout.html
+++ b/1-Palette du gout.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css" />
+    <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>La palette du goût</title>
 </head>
 
@@ -13,16 +16,16 @@
     </header>
 
     <section class="bigcards">
-        <img src="images/restaurants/1-Palette_du_goût.jpg" alt="photo montrant un plat gastronomique" />
+        <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h2 class="composition--title">La plaette du goût</h2>
+            <h2 class="composition--title">La palette du goût</h2>
 
             <div class="palette__entry">
                 <h2 class="palette--title">Entrées</h2>
 
                 <div class="palette__cards">
-                    <a href="#">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Fricassée d'escargot</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Au piment d'espelette</p>
@@ -31,8 +34,8 @@
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Foie gras de canard mi-cuit</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Et ses copeaux de truffe noire</p>
@@ -41,8 +44,8 @@
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Oeuf au plat</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonnée à la truffe sur lit de caviar</p>
@@ -54,8 +57,8 @@
                 <div class="palette__dishes">
                     <h2 class="palette--title">Plats</h2>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de boeuf aux herbes</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Accompagné de sa ribambelle de légumes</p>
@@ -64,8 +67,8 @@
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Parmentier de queue de boeuf</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">à la truffe noire sur sa purée de panais</p>
@@ -74,8 +77,8 @@
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de Turbot</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Aux agrumes</p>
@@ -87,8 +90,8 @@
                     <div class="palette__desserts">
                         <h2 class="palette--title">Desserts</h2>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Paris-Brest</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisité</p>
@@ -97,8 +100,8 @@
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Macaron au chocolat d'exception</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Et glace à la vanille de Madagascare</p>
@@ -107,8 +110,8 @@
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Mousse au chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Au piment d'espelette et à la truffe noire</p>
