nettoyage des fichiers inutiles

--- a/1-Palette du gout.html
+++ b/1-Palette du gout.html
@@ -19,10 +19,10 @@
         <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h2 class="composition--title">La palette du goût</h2>
+            <h1 class="composition--title">La palette du goût</h1>
 
             <div class="palette__entry">
-                <h2 class="palette--title">Entrées</h2>
+                <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards">
                     <a href="#" class="palette--link">
