--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <h2 class="title">Fonctionnement</h2>
 
-    <div class="step"> <!--Je vais devoir potentiellement rajouter un block pour la fontawesome, TBD-->
+    <div class="step">
         <div class="step__number">
             <i class="fas fa-mobile-alt"></i>
             <h2 class="step__number--title">Choisissez un restaurant</h2>
