--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="main.css" />
     <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
@@ -57,6 +57,8 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">La palette du goût</h2>
                     <p class="menu__cards--describe">Ménilmontant</p>
+                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <span class="menu--new">Nouveau</span>
                 </a>
             </article>      
 
@@ -66,6 +68,8 @@
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">La note enchantée</h2>
                     <p class="menu__cards--describe">Charonne</p>
+                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <span class="menu--new">Nouveau</span>
                 </a>    
             </article>
         
@@ -75,6 +79,7 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">à la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
+                    <i class="far fa-heart fa-lg menu--heart"></i>
                 </a>
             </article>
 
@@ -84,6 +89,7 @@
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">Le délice des sens</h2>
                     <p class="menu__cards--describe">Folie-Méricourt</p>
+                    <i class="far fa-heart fa-lg menu--heart"></i>
                 </a>
             </article>
         
