intégration des fonts via google, box shadow sur la partie step, changement de couleurs des fontawesome, correction marge partie step

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -28,21 +31,19 @@
         </div>
     </section>
 
-    <h2 class="title">Fonctionnement</h2>
-
     <div class="step">
         <div class="step__number">
-            <i class="fas fa-mobile-alt"></i>
+            <i class="fas fa-mobile-alt step__number--color"></i>
             <h2 class="step__number--title">Choisissez un restaurant</h2>
             <span class="step--lozenge">1</span>
         </div>
         <div class="step__number">
-            <i class="fas fa-list-ul"></i>
+            <i class="fas fa-list-ul step__number--color"></i>
             <h2 class="step__number--title">Composez votre menu</h2>
             <span class="step--lozenge">2</span>
         </div>
         <div class="step__number">
-            <i class="fas fa-store"></i>
+            <i class="fas fa-store step__number--color"></i>
             <h2 class="step__number--title">Dégustez au restaurant</h2>
             <span class="step--lozenge">3</span>
         </div>
