--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </section>
 
     <div class="step">
+        <h2 class="step--title">Fonctionnement </h2>
         <div class="step__number">
             <i class="fas fa-mobile-alt step__number--color"></i>
             <h2 class="step__number--title">Choisissez un restaurant</h2>
@@ -78,7 +79,7 @@
                 <a href="3-A la Francaise.html" class="menu__cards--link">
                     <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
-                    <h2 class="menu__cards--title">à la française</h2>
+                    <h2 class="menu__cards--title">A la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
                     <i class="far fa-heart fa-lg menu--heart"></i>
                 </a>
@@ -93,8 +94,6 @@
                     <i class="far fa-heart fa-lg menu--heart"></i>
                 </a>
             </article>
-        
-        <!--Modèle encore à déterminer pour le contenu des divs-->
     </section>
 
     <footer>
