ajout shadow sur titre de pages, ajout flèches retour pages de menu + changement html dansle header

--- a/2-La note enchantee.html
+++ b/2-La note enchantee.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
 
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La note enchantée</title>
+    <link rel="stylesheet" href="main.css" />
+    <script src="https://kit.fontawesome.com/7c1a4ed08f.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
+    <title>ohmyfood</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
+    <header class="start">
+        <a href="index.html" class="start--link">
+            <i class="fas fa-arrow-left start--arrow"></i>
+        </a>
+        <h1 class="logo">ohmyfood</h1>
     </header>
 
     <section class="bigcards">
