--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-            <img src="images/logo/ohmyfood.png"  alt="logo oh my food" class="logo"/>
+            <h1 class="logo--main">ohmyfood</h1>
     </header>
 
     <section class="introduction">
@@ -24,7 +24,7 @@
             <p>Paris, Belleville</p>
         </div>
 
-        <h1 class="introduction--title"> Réservez le menu qui vous convient</h1>
+        <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
         <div class="introduction__buton">
             <p>Explorer nos restaurants</p>
