rectification largeur bloc menu, centrage des pastilles, correction marges etapes fonctionnement

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -39,12 +39,12 @@
             <span class="step--lozenge">1</span>
         </div>
         <div class="step__number">
-            <i class="fas fa-list-ul step__number--color"></i>
+            <i class="fas fa-list-ul step__number--color step__number--marged"></i>
             <h2 class="step__number--title">Composez votre menu</h2>
             <span class="step--lozenge">2</span>
         </div>
         <div class="step__number">
-            <i class="fas fa-store step__number--color"></i>
+            <i class="fas fa-store step__number--color step__number--marged2"></i>
             <h2 class="step__number--title">Dégustez au restaurant</h2>
             <span class="step--lozenge">3</span>
         </div>
