--- a/1-Palette du gout.html
+++ b/1-Palette du gout.html
@@ -25,7 +25,9 @@
         <img src="images/restaurants/1-Palette_du_gout.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture" />
 
         <div class="composition">
-            <h1 class="composition--title">La palette du goût</h1>
+            <h1 class="composition--title">La palette du goût
+                <i class="far fa-heart fa-lg"></i>
+            </h1>
 
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
@@ -35,7 +37,7 @@
                         <h2 class="dish__name">Fricassée d'escargot</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Au piment d'espelette</p>
-                            <p class="descriptive--details">25€</p>
+                            <p class="descriptive--price">25€</p>
                         </div>
                     </a>
                 </div>
@@ -45,7 +47,7 @@
                         <h2 class="dish__name">Foie gras de canard mi-cuit</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Et ses copeaux de truffe noire</p>
-                            <p class="descriptive--details">35€</p>
+                            <p class="descriptive--price">35€</p>
                         </div>
                     </a>
                 </div>
@@ -55,20 +57,20 @@
                         <h2 class="dish__name">Oeuf au plat</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonnée à la truffe sur lit de caviar</p>
-                            <p class="descriptive--details">20€</p>
+                            <p class="descriptive--price">20€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette__dishes">
-                    <h2 class="palette--title">Plats</h2>
+                    <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
                     <div class="palette__cards">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de boeuf aux herbes</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Accompagné de sa ribambelle de légumes</p>
-                                <p class="descriptive--details">40€</p>
+                                <p class="descriptive--price">40€</p>
                             </div>
                         </a>
                     </div>
@@ -78,7 +80,7 @@
                             <h2 class="dish__name">Parmentier de queue de boeuf</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">à la truffe noire sur sa purée de panais</p>
-                                <p class="descriptive--details">35€</p>
+                                <p class="descriptive--price">35€</p>
                             </div>
                         </a>
                     </div>
@@ -88,20 +90,20 @@
                             <h2 class="dish__name">Filet de Turbot</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Aux agrumes</p>
-                                <p class="descriptive--details">44€</p>
+                                <p class="descriptive--price">44€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette__desserts">
-                        <h2 class="palette--title">Desserts</h2>
+                        <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
                         <div class="palette__cards">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Paris-Brest</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisité</p>
-                                    <p class="descriptive--details">18€</p>
+                                    <p class="descriptive--price">18€</p>
                                 </div>
                             </a>
                         </div>
@@ -111,7 +113,7 @@
                                 <h2 class="dish__name">Macaron au chocolat d'exception</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Et glace à la vanille de Madagascare</p>
-                                    <p class="descriptive--details">22€</p>
+                                    <p class="descriptive--price">22€</p>
                                 </div>
                             </a>
                         </div>
@@ -121,14 +123,14 @@
                                 <h2 class="dish__name">Mousse au chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Au piment d'espelette et à la truffe noire</p>
-                                    <p class="descriptive--details">23€</p>
+                                    <p class="descriptive--price">23€</p>
                                 </div>
                             </a>
                         </div>
                     </div>
 
                     <div class="order__buton">
-                        Commander
+                        <p>Commander</p>
                     </div>
 
                 </div>
@@ -145,3 +147,4 @@
     </footer>
     
 </body>
+</html>
