ajustement des marges des cards et rectification de l'épaisseur de la police

--- a/1-Palette du gout.html
+++ b/1-Palette du gout.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -79,7 +79,7 @@
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Parmentier de queue de boeuf</h2>
                             <div class="descriptive">
-                                <p class="descriptive--details">à la truffe noire sur sa purée de panais</p>
+                                <p class="descriptive--details">À la truffe noire sur sa purée de panais</p>
                                 <p class="descriptive--price">35€</p>
                             </div>
                         </a>
