--- a/2-La note enchantee.html
+++ b/2-La note enchantee.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -22,123 +22,125 @@
     </header>
 
     <section class="bigcards">
-        <img src="images/restaurants/2-Note_enchantée.jpg" alt="photo montrant un plat gastronomique" />
+        <img src="images/restaurants/2-Note_enchantee.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--enchantee" />
 
         <div class="composition">
-            <h2 class="composition--title">La note enchantée</h2>
+            <h2 class="composition--title">La note enchantée
+                <i class="far fa-heart fa-lg"></i>
+            </h2>
 
             <div class="palette__entry">
-                <h2 class="palette--title">Entrées</h2>
+                <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards">
-                    <a href="#">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Raviole de foie gras</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Accompagnés de leur crème à la truffe</p>
-                            <p class="descriptive--details">25€</p>
+                            <p class="descriptive--price">25€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Caviar osciètre</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Sur blini à la farine de blé noir</p>
-                            <p class="descriptive--details">35€</p>
+                            <p class="descriptive--price">35€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Homard et espuma de potiron</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Mariné aux zestes d'orange</p>
-                            <p class="descriptive--details">20€</p>
+                            <p class="descriptive--price">20€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Foie gras de canard cuit entier</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Confiture de figue et pain toasté</p>
-                            <p class="descriptive--details">35€</p>
+                            <p class="descriptive--price">35€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette__dishes">
-                    <h2 class="palette--title">Plats</h2>
+                    <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Noix de coquilles Saint-Jacques</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Sur lit de purée de céleri-rave</p>
-                                <p class="descriptive--details">40€</p>
+                                <p class="descriptive--price">40€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Langoustine poêlée</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Purée de patate douce</p>
-                                <p class="descriptive--details">35€</p>
+                                <p class="descriptive--price">35€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Mijoté de queue de boeuf</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et riz sauvage aux zests de citron</p>
-                                <p class="descriptive--details">44€</p>
+                                <p class="descriptive--price">44€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette__desserts">
-                        <h2 class="palette--title">Desserts</h2>
+                        <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Macaron noisette et chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Glace au caramel brun et sel de Guérande</p>
-                                    <p class="descriptive--details">18€</p>
+                                    <p class="descriptive--price">18€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Baba au rhum revisité</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Avec son coulis de citron</p>
-                                    <p class="descriptive--details">22€</p>
+                                    <p class="descriptive--price">22€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Tarte au citron meringuée</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Destructurée</p>
-                                    <p class="descriptive--details">23€</p>
+                                    <p class="descriptive--price">23€</p>
                                 </div>
                             </a>
                         </div>
                     </div>
 
                     <div class="order__buton">
-                        Commander
+                        <p>Commander</p>
                     </div>
 
                 </div>
