--- a/3-A la Francaise.html
+++ b/3-A la Francaise.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -22,113 +22,115 @@
     </header>
 
     <section class="bigcards">
-        <img src="images/restaurants/3-A la_française.jpg" alt="photo montrant un plat gastronomique" />
+        <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--francaise" />
 
         <div class="composition">
-            <h2 class="composition--title">a la française</h2>
+            <h2 class="composition--title">À la françaisee
+                <i class="far fa-heart fa-lg"></i>
+            </h2>
 
             <div class="palette__entry">
-                <h2 class="palette--title">Entrées</h2>
+                <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
                 <div class="palette__cards">
-                    <a href="#">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Tartare de poulpe acidulé</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Aux zests d'orange</p>
-                            <p class="descriptive--details">25€</p>
+                            <p class="descriptive--price">25€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Velouté de légumes d'antan</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Carotte, panais, topinambour</p>
-                            <p class="descriptive--details">35€</p>
+                            <p class="descriptive--price">35€</p>
                         </div>
                     </a>
                 </div>
 
-                <div class="palette_cards">
-                    <a href="#">
+                <div class="palette__cards">
+                    <a href="#" class="palette--link">
                         <h2 class="dish__name">Soupe à l'oignon</h2>
                         <div class="descriptive">
                             <p class="descriptive--details">Revisitée</p>
-                            <p class="descriptive--details">20€</p>
+                            <p class="descriptive--price">20€</p>
                         </div>
                     </a>
                 </div>
 
                 <div class="palette__dishes">
-                    <h2 class="palette--title">Plats</h2>
+                    <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Coquilles Saint-Jacques</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Accompagnées d'une purée de panais</p>
-                                <p class="descriptive--details">40€</p>
+                                <p class="descriptive--price">40€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Magret de canard</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Et parmentier de pommes de terres</p>
-                                <p class="descriptive--details">35€</p>
+                                <p class="descriptive--price">35€</p>
                             </div>
                         </a>
                     </div>
 
-                    <div class="palette_cards">
-                        <a href="#">
+                    <div class="palette__cards">
+                        <a href="#" class="palette--link">
                             <h2 class="dish__name">Pigeonneau d'Ille-et-Vilaine</h2>
                             <div class="descriptive">
                                 <p class="descriptive--details">Sur son lit de gnocchis aux légumes</p>
-                                <p class="descriptive--details">44€</p>
+                                <p class="descriptive--price">44€</p>
                             </div>
                         </a>
                     </div>
 
                     <div class="palette__desserts">
-                        <h2 class="palette--title">Desserts</h2>
+                        <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Pétales de violettes glacés</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Et purée de noisettes</p>
-                                    <p class="descriptive--details">18€</p>
+                                    <p class="descriptive--price">18€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Fondant au chocolat</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Revisité</p>
-                                    <p class="descriptive--details">22€</p>
+                                    <p class="descriptive--price">22€</p>
                                 </div>
                             </a>
                         </div>
 
-                        <div class="palette_cards">
-                            <a href="#">
+                        <div class="palette__cards">
+                            <a href="#" class="palette--link">
                                 <h2 class="dish__name">Millefeuille croustillant</h2>
                                 <div class="descriptive">
                                     <p class="descriptive--details">Myrtilles et pâte d'amande</p>
-                                    <p class="descriptive--details">23€</p>
+                                    <p class="descriptive--price">23€</p>
                                 </div>
                             </a>
                         </div>
                     </div>
 
                     <div class="order__buton">
-                        Commander
+                        <p>Commander</p>
                     </div>
 
                 </div>
