--- a/3-A la Francaise.html
+++ b/3-A la Francaise.html
@@ -25,7 +25,7 @@
         <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--francaise" />
 
         <div class="composition">
-            <h2 class="composition--title">À la françaisee
+            <h2 class="composition--title">À la française
                 <i class="far fa-heart fa-lg"></i>
             </h2>
 
