inclusion des coeurs dans une div, animation pas fonctionnel

--- a/index.html
+++ b/index.html
@@ -60,18 +60,24 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">La palette du goût</h2>
                     <p class="menu__cards--describe">Ménilmontant</p>
-                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <div class="menu__container"/>
+                        <i class="far fa-heart fa-lg menu--heart"></i>
+                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
+                    </div>
                     <span class="menu--new">Nouveau</span>
                 </a>
             </article>      
 
             <article class="menu__cards">
-                <a href="La note enchantee" class="menu__cards--link">
+                <a href="2-La note enchantee.html" class="menu__cards--link">
                     <img src="images/restaurants/2-Note_enchantee.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">La note enchantée</h2>
                     <p class="menu__cards--describe">Charonne</p>
-                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <div class="menu__container"/>
+                        <i class="far fa-heart fa-lg menu--heart"></i>
+                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
+                    </div>           
                     <span class="menu--new">Nouveau</span>
                 </a>    
             </article>
@@ -82,7 +88,10 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">A la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
-                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <div class="menu__container"/>
+                        <i class="far fa-heart fa-lg menu--heart"></i>
+                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
+                    </div>
                 </a>
             </article>
 
@@ -92,7 +101,10 @@
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">Le délice des sens</h2>
                     <p class="menu__cards--describe">Folie-Méricourt</p>
-                    <i class="far fa-heart fa-lg menu--heart"></i>
+                    <div class="menu__container"/>
+                        <i class="far fa-heart fa-lg menu--heart"></i>
+                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
+                    </div>
                 </a>
             </article>
     </section>
