Modification de la structure HTML des boutons explorer nos restaurants et commander.

--- a/1-Palette du gout.html
+++ b/1-Palette du gout.html
@@ -129,10 +129,9 @@
                         </div>
                     </div>
 
-                    <div class="order__buton">
-                        <p>Commander</p>
-                    </div>
-
+                    <button class="order__buton">
+                        Commander
+                    </button>
                 </div>
             </div>
         </div>
