--- a/4-Delice des sens.html
+++ b/4-Delice des sens.html
@@ -128,10 +128,9 @@
                             </a>
                         </div>
 
-                    <div class="order__buton">
-                        <p>Commander</p>
-                    </div>
-
+                    <button class="order__buton">
+                        Commander
+                    </button>
                     </div>
                 </div>
             </div>
