--- a/3-A la Francaise.html
+++ b/3-A la Francaise.html
@@ -128,11 +128,10 @@
                             </a>
                         </div>
                     </div>
-
-                    <div class="order__buton">
-                        <p>Commander</p>
-                    </div>
-
+                    
+                    <button class="order__buton">
+                        Commander
+                    </button>
                 </div>
             </div>
         </div>
