--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
         <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-        <div class="introduction__buton">
-            <p>Explorer nos restaurants</p>
-        </div>
+        
+        <button class="introduction__buton">
+            Explorer nos restaurants
+        </button>
     </section>
 
     <div class="step">
