création des coeurs des cards en pure css

--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">La palette du goût</h2>
                     <p class="menu__cards--describe">Ménilmontant</p>
-                    <div class="menu__container"/>
-                        <i class="far fa-heart fa-lg menu--heart"></i>
-                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
-                    </div>
+                    <div class="menu__heart--black"></div>
+                    <div class="menu__heart--white"></div> 
                     <span class="menu--new">Nouveau</span>
                 </a>
             </article>      
@@ -75,10 +73,8 @@
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">La note enchantée</h2>
                     <p class="menu__cards--describe">Charonne</p>
-                    <div class="menu__container"/>
-                        <i class="far fa-heart fa-lg menu--heart"></i>
-                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
-                    </div>           
+                    <div class="menu__heart--black"></div>
+                    <div class="menu__heart--white"></div>           
                     <span class="menu--new">Nouveau</span>
                 </a>    
             </article>
@@ -89,10 +85,8 @@
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">A la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
-                    <div class="menu__container"/>
-                        <i class="far fa-heart fa-lg menu--heart"></i>
-                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
-                    </div>
+                    <div class="menu__heart--black"></div>
+                    <div class="menu__heart--white"></div>  
                 </a>
             </article>
 
@@ -102,12 +96,11 @@
                     class="menu__cards--size" />
                     <h2 class="menu__cards--title">Le délice des sens</h2>
                     <p class="menu__cards--describe">Folie-Méricourt</p>
-                    <div class="menu__container"/>
-                        <i class="far fa-heart fa-lg menu--heart"></i>
-                        <i class="fas fa-heart fa-lg menu--heartfill "></i>
-                    </div>
+                    <div class="menu__heart--black"></div>
+                    <div class="menu__heart--white"></div>  
                 </a>
             </article>
+
     </section>
 
     <footer>
