Correction des erreurs affiches par le W3C, insertion des coeurs sur toutes les pages

--- a/2-la_note_enchantee.html
+++ b/2-la_note_enchantee.html
@@ -26,7 +26,8 @@
 
         <div class="composition">
             <h2 class="composition--title">La note enchantée
-                <i class="far fa-heart fa-lg"></i>
+                <p class="composition__heart--black"></p>
+                <p class="composition__heart--white"></p> 
             </h2>
 
             <div class="palette__entry">
