--- a/3-a_ la_francaise.html
+++ b/3-a_ la_francaise.html
@@ -22,11 +22,12 @@
     </header>
 
     <section class="bigcards">
-        <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--francaise" />
+        <img src="images/restaurants/3-a_la_francaise.jpg" alt="photo montrant un plat gastronomique" class="bigcards__picture--francaise" />
 
         <div class="composition">
             <h2 class="composition--title">À la française
-                <i class="far fa-heart fa-lg"></i>
+                <p class="composition__heart--black"></p>
+                <p class="composition__heart--white"></p> 
             </h2>
 
             <div class="palette__entry">
