--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </article>
         
             <article class="menu__cards">
-                <a href="3-a_la_francaise.html" class="menu__cards--link">
-                    <img src="images/restaurants/3-A la_francaise.jpg" alt="photo montrant un plat gastronomique" 
+                <a href="3-a_ la_francaise.html" class="menu__cards--link">
+                    <img src="images/restaurants/3-A_la_francaise.jpg" alt="photo montrant un plat gastronomique" 
                     class="menu__cards--size"/>
                     <h2 class="menu__cards--title">A la française</h2>
                     <p class="menu__cards--describe">Cité rouge</p>
