les balises button on été remplacés par des balises lien pour que ceux-ci soient cliquables

--- a/3-a_ la_francaise.html
+++ b/3-a_ la_francaise.html
@@ -130,9 +130,9 @@
                         </div>
                     </div>
                     
-                    <button class="order__buton">
-                        Commander
-                    </button>
+                    <a href="#" class="order__buton">
+                        <p>Commander</p>
+                    </a>
                 </div>
             </div>
         </div>
