--- a/4-delice_des_sens.html
+++ b/4-delice_des_sens.html
@@ -129,9 +129,9 @@
                             </a>
                         </div>
 
-                    <button class="order__buton">
-                        Commander
-                    </button>
+                        <a href="#" class="order__buton">
+                            <p>Commander</p>
+                        </a>
                     </div>
                 </div>
             </div>
