--- a/2-la_note_enchantee.html
+++ b/2-la_note_enchantee.html
@@ -140,9 +140,9 @@
                         </div>
                     </div>
 
-                    <button class="order__buton">
-                        Commander
-                    </button>
+                    <a href="#" class="order__buton">
+                        <p>Commander</p>
+                    </a>
                 </div>
             </div>
         </div>
