--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <h2 class="introduction--title"> Réservez le menu qui vous convient</h2>
         <p class="introduction--describe">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
 
-        <button class="introduction__buton">
-            Explorer nos restaurants
-        </button>
+        <a href="#" class="introduction__buton">
+            <p>Explorer nos restaurants</p>
+        </a>
     </section>
 
     <div class="step">
