ajout fichier keyframe.scss, prépration des keyframes pour l'animation des menus

--- a/1-palette_du_gout.html
+++ b/1-palette_du_gout.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="images/logo/ohmyfood@2x.svg" href="images/logo/ohmyfood@2x.svg">
     <title>ohmyfood</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
 </head>
 
@@ -33,7 +33,7 @@
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Fricassée d'escargot</h2>
                         <div class="descriptive">
