ajout de l'animation d'apparition des menus pour la note enchantee

--- a/1-palette_du_gout.html
+++ b/1-palette_du_gout.html
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards delay-three">
+                    <div class="palette__cards delay--three">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Filet de Turbot</h2>
                             <div class="descriptive">
@@ -99,7 +99,7 @@
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette__cards delay-one">
+                        <div class="palette__cards delay--one">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Paris-Brest</h2>
                                 <div class="descriptive">
