--- a/2-la_note_enchantee.html
+++ b/2-la_note_enchantee.html
@@ -33,7 +33,7 @@
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--one">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Raviole de foie gras</h2>
                         <div class="descriptive">
@@ -43,7 +43,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--two">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Caviar osciètre</h2>
                         <div class="descriptive">
@@ -53,7 +53,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--three">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Homard et espuma de potiron</h2>
                         <div class="descriptive">
@@ -63,7 +63,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--three">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Foie gras de canard cuit entier</h2>
                         <div class="descriptive">
@@ -76,7 +76,7 @@
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--one">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Noix de coquilles Saint-Jacques</h2>
                             <div class="descriptive">
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--two">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Langoustine poêlée</h2>
                             <div class="descriptive">
@@ -96,7 +96,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--three">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Mijoté de queue de boeuf</h2>
                             <div class="descriptive">
@@ -106,10 +106,10 @@
                         </a>
                     </div>
 
-                    <div class="palette__desserts">
+                    <div class="palette__dessert">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--one">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Macaron noisette et chocolat</h2>
                                 <div class="descriptive">
@@ -119,7 +119,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--two">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Baba au rhum revisité</h2>
                                 <div class="descriptive">
@@ -129,7 +129,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--three">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Tarte au citron meringuée</h2>
                                 <div class="descriptive">
