--- a/3-a_ la_francaise.html
+++ b/3-a_ la_francaise.html
@@ -33,7 +33,7 @@
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--one">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Tartare de poulpe acidulé</h2>
                         <div class="descriptive">
@@ -43,7 +43,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--two">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Velouté de légumes d'antan</h2>
                         <div class="descriptive">
@@ -53,7 +53,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--three">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Soupe à l'oignon</h2>
                         <div class="descriptive">
@@ -66,7 +66,7 @@
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--one">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Coquilles Saint-Jacques</h2>
                             <div class="descriptive">
@@ -76,7 +76,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--two">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Magret de canard</h2>
                             <div class="descriptive">
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--three">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Pigeonneau d'Ille-et-Vilaine</h2>
                             <div class="descriptive">
@@ -99,7 +99,7 @@
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--one">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Pétales de violettes glacés</h2>
                                 <div class="descriptive">
@@ -109,7 +109,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--two">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Fondant au chocolat</h2>
                                 <div class="descriptive">
@@ -119,7 +119,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--three">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Millefeuille croustillant</h2>
                                 <div class="descriptive">
