--- a/4-delice_des_sens.html
+++ b/4-delice_des_sens.html
@@ -33,7 +33,7 @@
             <div class="palette__entry">
                 <h2 class="palette--title"><span class="underline">Entr</span>ées</h2>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--one">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Tartare de thon</h2>
                         <div class="descriptive">
@@ -43,7 +43,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--two">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Bouchée de homard croustillant</h2>
                         <div class="descriptive">
@@ -53,7 +53,7 @@
                     </a>
                 </div>
 
-                <div class="palette__cards">
+                <div class="palette__cards delay--three">
                     <a href="#" class="palette--link">
                         <h2 class="dish__name">Velouté de cèpes</h2>
                         <div class="descriptive">
@@ -66,7 +66,7 @@
                 <div class="palette__dishes">
                     <h2 class="palette--title"><span class="underline">Plat</span>s</h2>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--one">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Poulet rôti aux herbes de provence</h2>
                             <div class="descriptive">
@@ -76,7 +76,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--two">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Langouste rôtie</h2>
                             <div class="descriptive">
@@ -86,7 +86,7 @@
                         </a>
                     </div>
 
-                    <div class="palette__cards">
+                    <div class="palette__cards delay--three">
                         <a href="#" class="palette--link">
                             <h2 class="dish__name">Côte de boeuf angus</h2>
                             <div class="descriptive">
@@ -99,7 +99,7 @@
                     <div class="palette__desserts">
                         <h2 class="palette--title"><span class="underline">Dess</span>erts</h2>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--one">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Farandole de desserts</h2>
                                 <div class="descriptive">
@@ -109,7 +109,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--two">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Crème brulée</h2>
                                 <div class="descriptive">
@@ -119,7 +119,7 @@
                             </a>
                         </div>
 
-                        <div class="palette__cards">
+                        <div class="palette__cards delay--three">
                             <a href="#" class="palette--link">
                                 <h2 class="dish__name">Tiramisu</h2>
                                 <div class="descriptive">
