création du loading spinner et ajout des animations respectives, a finaliser

--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
         <a href="#" class="footer__links">Mentions légales</a>
         <a href="mailto:contact@gmail.com" class="footer__links">Contact</a>
     </footer>
+
+    <div class="spinner">
+        <div class="spinner--quart"></div>
+        <span class="spinner--load">Loading</span>
+        <span class="spinner--dot">.</span>
+        <span class="spinner--dot2">.</span>
+        <span class="spinner--dot3">.</span>
+    </div>
     
 </body>
 </html>
