ajout de la coche pour les menu, reglage du loading spinner pour qu'il prenne toute la page, pas fonctionnel encore

--- a/1-palette_du_gout.html
+++ b/1-palette_du_gout.html
@@ -40,6 +40,9 @@
                             <p class="descriptive--details">Au piment d'espelette</p>
                             <p class="descriptive--price">25€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -50,6 +53,9 @@
                             <p class="descriptive--details">Et ses copeaux de truffe noire</p>
                             <p class="descriptive--price">35€</p>
                         </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </a>
                 </div>
 
@@ -59,6 +65,9 @@
                         <div class="descriptive">
                             <p class="descriptive--details">Assaisonnée à la truffe sur lit de caviar</p>
                             <p class="descriptive--price">20€</p>
+                        </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
                         </div>
                     </a>
                 </div>
@@ -73,6 +82,9 @@
                                 <p class="descriptive--details">Accompagné de sa ribambelle de légumes</p>
                                 <p class="descriptive--price">40€</p>
                             </div>
+                        <div class="palette--checkicon">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                         </a>
                     </div>
 
