--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 </head>
 
 <body>
+    <div class="spinner">
+        <div class="spinner--quart"></div>
+        <span class="spinner--load">Loading</span>
+        <span class="spinner--dot spinner--dot1">.</span>
+        <span class="spinner--dot spinner--dot2">.</span>
+        <span class="spinner--dot spinner--dot3">.</span>
+    </div>
+
     <header>
             <h1 class="logo--main">ohmyfood</h1>
     </header>
@@ -110,14 +118,6 @@
         <a href="#" class="footer__links">Mentions légales</a>
         <a href="mailto:contact@gmail.com" class="footer__links">Contact</a>
     </footer>
-
-    <div class="spinner">
-        <div class="spinner--quart"></div>
-        <span class="spinner--load">Loading</span>
-        <span class="spinner--dot">.</span>
-        <span class="spinner--dot2">.</span>
-        <span class="spinner--dot3">.</span>
-    </div>
     
 </body>
 </html>
